# RadiativeCorrections

./: CMakeLists.txt  README.md  config.sh
include/: AmrounElasticFF.hh  BarcusElasticFF.hh  CarbonElasticFF.hh  DipoleElasticFF.hh  ElasticFormFactor.hh  GMp12ElasticFF.hh  Kinematics.hh  RCConstants.hh  RadiativeCorrections.hh  SteinElasticFF.hh  Target.hh  constants.hh  eElasticCrossSection.hh  eInclusiveCrossSection.hh
src/: AmrounElasticFF.cc  BarcusElasticFF.cc  CarbonElasticFF.cc  DipoleElasticFF.cc  ElasticFormFactor.cc  GMp12ElasticFF.cc  Kinematics.cc  RadiativeCorrections.cc  SteinElasticFF.cc  Target.cc  eElasticCrossSection.cc  eInclusiveCrossSection.cc
test/: CMakeLists.txt  Plot.cxx  TestFF.cxx  TestRC.cxx  config.sh  test.cc
test/include/: CSVManager.hh
test/input/: mo-and-tsai_Es-1.csv  mo-and-tsai_Es-20.csv  mo-and-tsai_Es-5.csv
test/src/: CSVManager.cc
